--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 	<h1>Hi Dmitry !!!</h1>
 	<h2>YOU STRONG! YOU MUST! YOU CAN!</h2>
-	<script src="js/script.js"></script>
+	<script src="js/drawCats.js"></script>
 	<div class="block">
 		<div class="block__"></div>
 
