--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
+	<link rel="stylesheert", href="css/style.css">
+	<title>JS for CHILD</title>
 </head>
 
 <body>
 	<h1>Hi Dmitry !!!</h1>
-	<h2>YOU STRONG! YOU MUST! YOU CAN!</h2>
-	<script src="js/drawCats.js"></script>
+	<h2><em>YOU STRONG! YOU MUST! YOU CAN!</em></h2>
+	<script src="js/script.js"></script>
 	<div class="block">
 		<div class="block__"></div>
 
