--- a/dom.html
+++ b/dom.html
@@ -3,11 +3,15 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<script src="https://code.jquery.com/jquery-3.7.1.js" 
+	integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" 
+	crossorigin="anonymous"></script>
 	<title>Learning DOM</title>
 </head>
 <body>
 	<h1 id="main-heading">Hello, World!!!</h1>
-	<script src="js/newHeading.js"></script>
+	<script src="js/studyJQuery.js"></script>
+	
 	
 </body>
 </html>
