--- a/dom.html
+++ b/dom.html
@@ -8,9 +8,10 @@
 </head>
 <body>
 	<h1 id="main-heading">Hello, World!!!</h1>
+	<h2>test jQuery</h2>
 	<script src="https://code.jquery.com/jquery-3.7.1.js" 
 	integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" 
 	crossorigin="anonymous"></script>
-	<script src="js/studyJQuery.js"></script>
+	<script src="js/exerciseChapterNine.js"></script>
 </body>
 </html>
