--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 	<h1>Hi Dmitry !!!</h1>
 	<h2><em>YOU STRONG! YOU MUST! YOU CAN!</em></h2>
-	<script src="js/exerciseChapterEight.js"></script>
+	<script src="js/script.js"></script>
 	<div class="block">
 		<div class="block__"></div>
 
