--- a/interactive.html
+++ b/interactive.html
@@ -12,5 +12,6 @@
 	<h1>Hello, evebody!!!</h1>
 	
 	<script src="js/moveHeading.js"></script>
+	<script src="js/clickEvent.js"></script>
 </body>
 </html>
