--- a/interactive.html
+++ b/interactive.html
@@ -10,8 +10,6 @@
 </head>
 <body>
 	<h1>Hello, evebody!!!</h1>
-	
-	<script src="js/moveHeading.js"></script>
-	<script src="js/clickEvent.js"></script>
+	<script src="js/exerciseChapterTen.js"></script>
 </body>
 </html>
