fast move & stop

--- a/interactive.html
+++ b/interactive.html
@@ -9,7 +9,8 @@
 	<title>Interactive programming</title>
 </head>
 <body>
-	<h1>Hello, evebody!!!</h1>
+	<h1>(-_-)</h1>
+	<h2 style="margin-left: 500px;">WELCOME TO THE RUN!!!</h2>
 	<script src="js/exerciseChapterTen.js"></script>
 </body>
 </html>
