--- a/treasure.html
+++ b/treasure.html
@@ -10,11 +10,12 @@
 </head>
 <body>
 	
-	<h1 id="heading">Find treasure!</h1>
+	<h1 id="heading" style="color: rgb(238, 7, 115);">Find treasure!</h1>
+	<h2 id="distance" style="margin-left: 800px; color: #10c019;">Click to find treasure!</h2>
 	<img id="map" width="600" height="400" src="src/treasureMAp.jpg">
-	<p id="distance"></p>
+	
 
-	<script src="js/script.js"></script>
+	<script src="js/treasure.js"></script>
 	
 </body>
 </html>
