--- a/car.html
+++ b/car.html
@@ -9,7 +9,7 @@
 	<title>Race</title>
 </head>
 <body>
-	<script src="js/car.js"></script>
+	<script src="js/exerciseChapterTwelve.js"></script>
 	
 </body>
 </html>
