--- a/interactive.html
+++ b/interactive.html
@@ -11,6 +11,6 @@
 <body>
 	<h1>(-_-)</h1>
 	<h2 style="margin-left: 500px;">WELCOME TO THE RUN!!!</h2>
-	<script src="js/exerciseChapterTen.js"></script>
+	<script src="js/exerciseChapterNine.js"></script>
 </body>
 </html>
